# craton-hsm-core

./: .gitattributes  .gitignore  Cargo.toml  ROADMAP.md  clippy.json  clippy.txt  clippy_out.txt  scratch.rs
.github/workflows/: ci.yml  nextest.yml  release.yml  security-audit.yml
benches/: crypto_bench.rs
craton-hsm-daemon/: Cargo.toml
craton-hsm-daemon/src/: config.rs  main.rs  server.rs  tls.rs
deploy/: Dockerfile.ci
scripts/: ci-local.sh  local-ci-container.sh  local-ci.sh
src/: core.rs  error.rs  lib.rs  platform_acl.rs
src/audit/: log.rs
src/config/: config.rs
src/crypto/: awslc_backend.rs  backend.rs  conditional_test.rs  drbg.rs  encrypt.rs  entropy_health.rs  integrity.rs  mod.rs  pairwise_test.rs  pqc.rs  rate_limit.rs  rustcrypto_backend.rs  self_test.rs  sign.rs  wrap.rs
src/pkcs11_abi/: constants.rs  functions.rs
src/session/: handle.rs  manager.rs  session.rs
src/store/: attributes.rs  backup.rs  encrypted_store.rs  key_material.rs  lifecycle.rs  lockout_store.rs  mod.rs  object.rs
src/token/: slot.rs  token.rs
tests/: attribute_management.rs  attribute_validation.rs  audit_and_integrity.rs  backup_restore.rs  concurrent_crypto_hardening.rs  concurrent_stress.rs  crypto_vectors_phase2.rs  entropy_health_wiring.rs  fips_approved_mode.rs  key_rotation.rs  multipart_encrypt_decrypt.rs  multipart_sign_verify.rs  negative_edge_cases.rs  operation_state.rs  persistence.rs  pkcs11_compliance.rs  pkcs11_compliance_extended.rs  pkcs11_conformance.rs  random_and_session.rs  rsa_abi_comprehensive.rs  security_properties.rs  session_state_machine.rs  supplementary_functions.rs  zeroization.rs
tools/craton-hsm-admin/: Cargo.toml
tools/craton-hsm-admin/src/: main.rs
tools/pkcs11-spy/: Cargo.toml
tools/pkcs11-spy/src/: lib.rs  loader.rs  logger.rs
(+3 files in other folders)
