[package]
name = "craton-hsm-daemon"
version = "0.3.1"
edition = "2021"
description = "Craton HSM network daemon — gRPC over TLS for remote HSM access"
license = "Apache-2.0"
repository = "https://github.com/craton-co/craton-hsm-core"

[[bin]]
name = "craton-hsm-daemon"
path = "src/main.rs"

[dependencies]
craton-hsm = { path = ".." }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["limit"] }
prost = "0.14"
rustls = "0.23"
sha2 = "0.10"
tokio-rustls = "0.26"
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
zeroize = "1"
async-stream = "0.3"
arc-swap = "1"

# `resolved_unix_socket_path` calls `libc::getuid()` to tag the fallback Unix
# socket path with the daemon's UID. Only used in `#[cfg(unix)]` code, so it is
# gated to Unix targets and never pulled into the Windows build.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-prost-build = "0.14"
